# PracticalCalcDesign

./: CMakeLists.txt  main.cpp
Backend/: Command.cpp  Command.m.cpp  CommandDispatcher.m.cpp  CommandFactory.m.cpp  CommandInterpreter.cpp  CommandInterpreter.m.cpp  CommandManager.ixx  CommandManager.m.cpp  CoreCommands.m.cpp  DynamicLoader.m.cpp  PlatformFactory.cpp  PlatformFactory.m.cpp  PosixFactory.cpp  PosixFactory.m.cpp  Stack.m.cpp  WindowsDynamicLoader.m.cpp  WindowsFactory.cpp  WindowsFactory.m.cpp
Ui/: UserInterface.cpp
Utilities/: Exception.h  Exception.m.cpp  Observer.m.cpp  Publisher.m.cpp  Tokenizer.m.cpp  Utilities.m.cpp
